Able to load multiple models at once